--- a/res/layout/activity_corre.xml
+++ b/res/layout/activity_corre.xml
@@ -8,23 +8,51 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="center|top"
-    tools:context=".CorreActivity" >
+    tools:context=".CorreActivity" 
+     >
 
-    <TextView
-        android:id="@+id/textView1"
+     <RadioGroup
+        
+        android:id="@+id/radioGroup1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="@string/TextView" />
-    
+        android:layout_height="wrap_content">
+        
+        <RadioButton 
+            android:id="@+id/radio10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/radio10" />
+        
+        <RadioButton
+            
+             android:id="@+id/radio20"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/radio20" />
+        
+              <RadioButton
+            
+             android:id="@+id/radio30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/radio30" />
+            
+    </RadioGroup>
      <Space
         android:layout_width="match_parent"
         android:layout_height="20dip" />
-  
-    <Switch 
-        android:id="@+id/switch2"
+     
+             <SeekBar 
+                 android:id="@+id/seekBar1"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 />
+    
+             <Button
+        android:id="@+id/button1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-  
-   
-   
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:text="@string/Button"
+        android:onClick="onClickSubmit" />
+    </LinearLayout>
