--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -33,54 +33,14 @@
         android:layout_height="20dip" />
      
    
-    <RadioGroup
-        android:id="@+id/radioGroup1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
-
-
-        <RadioButton
-            android:id="@+id/radio1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/RadioButton0" />
-
-
-        <RadioButton
-            android:id="@+id/radio2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/RadioButton1" />
-
-
-        <RadioButton
-            android:id="@+id/radio3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/RadioButton2" />
-    </RadioGroup>
-   <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dip" />
     
-
-   <SeekBar
-        android:id="@+id/seekBar1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-   
-   <Space
-        android:layout_width="match_parent"
-        android:layout_height="20dip" />
-   
-   
      <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="17dp"
-        android:text="@string/Button"
-        android:onClick="onClickSubmit" />
+        android:text="@string/Button1"
+        android:onClick="onClickNext" />
    
      
 </LinearLayout>
